--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
             <h3>Josias</h3>
             <h5>DJOSSOU-DAN</h5>
-            <p>cliquez sur le plus</p>
+            <p>cliquez sur l'îcone plus</p>
             <div class="flex space-between">
                 <a href="javascript:void(0);" id="show" class="btn"> <i class="fa fa-plus"></i> </a>      
                 <a href="https://www.linkedin.com/in/josias-djossou-dan-269b78195" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i></a>
