--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
 </head>
 <body>
     <header>
-        <a href="javascript:void(0);"><i class="fa fa-refresh" aria-hidden="true"></i></a>
+        <a href="javascript:void(0);" style="display: none;" id="refresh">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" style="height: 3rem; width: 3rem;" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 0 1h-13A.5.5 0 0 1 1 8zm7-8a.5.5 0 0 1 .5.5v3.793l1.146-1.147a.5.5 0 0 1 .708.708l-2 2a.5.5 0 0 1-.708 0l-2-2a.5.5 0 1 1 .708-.708L7.5 4.293V.5A.5.5 0 0 1 8 0zm-.5 11.707-1.146 1.147a.5.5 0 0 1-.708-.708l2-2a.5.5 0 0 1 .708 0l2 2a.5.5 0 0 1-.708.708L8.5 11.707V15.5a.5.5 0 0 1-1 0v-3.793z"/>
+            </svg>
+        </a>
     </header>
     <div class="content">
         <div class="side">
-            <span class="help"> cliquez sur une couleur </span>
+            <span class="help" style="width: 6rem;"> cliquez sur une couleur </span>
             <div class="slide active">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" style="height: 3rem; width: 3rem;" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M6.776 1.553a.5.5 0 0 1 .671.223l3 6a.5.5 0 0 1 0 .448l-3 6a.5.5 0 1 1-.894-.448L9.44 8 6.553 2.224a.5.5 0 0 1 .223-.671z"/>
