--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
     <div class="content">
         <div class="side">
-            <span class="help" style="width: 6rem;"> cliquez sur une couleur </span>
+            <!-- <span class="help" style="width: 6rem;"> cliquez sur une couleur </span> -->
             <div class="slide active">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" style="height: 3rem; width: 3rem;" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M6.776 1.553a.5.5 0 0 1 .671.223l3 6a.5.5 0 0 1 0 .448l-3 6a.5.5 0 1 1-.894-.448L9.44 8 6.553 2.224a.5.5 0 0 1 .223-.671z"/>
