--- a/index.html
+++ b/index.html
@@ -60,12 +60,14 @@
     <div class="message">
         <a href="javascript:void(0);" id="close" class="btn-close"><i class="fas fa-times"></i></a>
         <div class="header">
-            <h1>It's My birthday</h1>
+            <h1>About Me</h1>
         </div>
-        <p>
-            Aujourd'hui c'est mon anniversaire, je fête mes 20 ans. En ce jour j'ai voulu faire ce site afin de remercier mes amies, la famille et toi aussi.
-            Alors que tu sois DEV ou NON ? Peu importe ton métier tu peux tout juste m'écrire ( lien sur la page orange ) et me donner tes impressions sur le site ça me fera vraiment plaisir 😇.
-        </p>
+        <p>I am undergraduate computer science student passionate in learning and working on web development projects with languages such as javascript , php and their frameworks. I am generally working on personal projects to grow my skills up, though i also have interest in other fields.</p>
+        <ul>
+            <li>🔭 I’m currently working on alx-holberton projects, and personal projects involving my skills in bash shell, C language,</li>
+            <li>😄 I&#39;ve some skills in Symfony, Laravel, Django, ReactJs, AdonisJs, TailwindCss. </li>
+            <li>🌱 I’m currently reviewing my knowledges in software development process and linux command lines</li>
+        </ul>
     </div>
     <script src="script.js"></script>
 </body>
